✨ VSR updates made this easy!

--- a/package.json
+++ b/package.json
@@ -8,12 +8,11 @@
     "build": "vite build",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build",
-    "postinstall": "node ./esbuild.config.js"
+    "build-storybook": "storybook build"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.2.1",
-    "@guidepup/virtual-screen-reader": "^0.19.0",
+    "@guidepup/virtual-screen-reader": "^0.20.0",
     "@storybook/addon-essentials": "^8.0.0-beta.6",
     "@storybook/addon-interactions": "^8.0.0-beta.6",
     "@storybook/addon-links": "^8.0.0-beta.6",
@@ -23,11 +22,7 @@
     "@storybook/test": "^8.0.0-beta.6",
     "memfs": "^4.7.7",
     "storybook": "^8.0.0-beta.6",
-    "vite": "^5.1.4",
-    "vite-plugin-node-polyfills": "^0.21.0"
-  },
-  "overrides": {
-    "@guidepup/guidepup": "^0.22.3"
+    "vite": "^5.1.4"
   },
   "resolutions": {
     "@storybook/addon-a11y": "8.0.0-beta.6",
