--- a/package.json
+++ b/package.json
@@ -8,20 +8,24 @@
     "build": "vite build",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "test-storybook": "test-storybook --verbose"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^1.2.1",
-    "@guidepup/virtual-screen-reader": "^0.20.0",
-    "@storybook/addon-essentials": "^8.0.0-beta.6",
-    "@storybook/addon-interactions": "^8.0.0-beta.6",
-    "@storybook/addon-links": "^8.0.0-beta.6",
-    "@storybook/blocks": "^8.0.0-beta.6",
-    "@storybook/html": "^8.0.0-beta.6",
-    "@storybook/html-vite": "^8.0.0-beta.6",
-    "@storybook/test": "^8.0.0-beta.6",
-    "storybook": "^8.0.0-beta.6",
-    "vite": "^5.1.4"
+    "@chromatic-com/storybook": "^1.2.22",
+    "@guidepup/virtual-screen-reader": "^0.24.0",
+    "@storybook/addon-coverage": "^1.0.1",
+    "@storybook/addon-essentials": "^8.0.0",
+    "@storybook/addon-interactions": "^8.0.0",
+    "@storybook/addon-links": "^8.0.0",
+    "@storybook/blocks": "^8.0.0",
+    "@storybook/html": "^8.0.0",
+    "@storybook/html-vite": "^8.0.0",
+    "@storybook/test": "^8.0.0",
+    "@storybook/test-runner": "^0.17.0",
+    "axe-playwright": "^2.0.1",
+    "storybook": "^8.0.0",
+    "vite": "^5.1.6"
   },
   "resolutions": {
     "@storybook/addon-a11y": "8.0.0-beta.6",
